more adjustments